setup db values in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+#mySQL DB setup properties
+#update = update database as needed, create new tables etc. as needed
+#can also be create? not sure of difference
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/dashboard_app_db
+spring.datasource.username=testUser
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
